--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.99.0",
-    "@react-three/fiber": "^9.1.1",
-    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.15.13",
     "glslify": "^7.1.1",
     "next": "15.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spring": "^9.7.5",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "vercel": "^41.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
