--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --no-lint --skip-type-check",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
