--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@react-three/postprocessing": "^2.15.12",
+    "@types/uuid": "^10.0.0",
     "glslify": "^7.1.1",
     "next": "^14.2.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.3",
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
